fix(SidebarItem): 优化导航栏

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -50,6 +50,20 @@
         padding: 0 10px !important;
       }
     }
+    .el-menu-item {
+      display: block;
+      padding-left: 10px !important;
+      &>span {
+        height: 0;
+        width: 0;
+        overflow: hidden;
+        visibility: hidden;
+        display: inline-block
+      }
+      .el-sub-menu__icon-arrow {
+        display: none;
+      }
+    }
     .el-sub-menu {
       &>.el-sub-menu__title {
         display: block;
